# clitest

./: .travis.yml  CMakeLists.txt  SimpleButton.cpp  SimpleButton.h  SimpleWidget.cpp  SimpleWidget.css  SimpleWidget.h  SimpleWidget.qrc  SimpleWidget.ui  TestProject.pro  appveyor.yml  main.cpp
